--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
                 <li>Listes</li>
                 <li>Tuples</li>
                 <li>Dictionnaires</li>
-                <li>Tris</li>
+                <li>
+                    <ol class="sous-num">
+                        <li><a href="triSelection.html">Tri par sélection</a></li>
+                        <li><a href="triInsertion.html">Tri par insertion</a></li>
+                        <li><a href="trisPython.html">Tris en Python</a></li>
+                        <li><a href="algorithmie.html">Algorithmie : terminaison, correction, complexité</a></li>
+                    </ol>
+                </li>
+                <li>Dichotomie</li>
                 <li>Plus proches voisins</li>
-                <li>Gloutons</li>
-                <li>Tkinter</li>
+                <li><a href="glouton.html">Algorithmes gloutons</a></li>
+                <li><a href="tkinter.html">Interface graphique avec Tkinter</a></li>
             </ol>
         </div>
     </body>
