--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             <ol>
                 <li><a href="1.LancerPython/LancerPython.pdf">Lancer Python</a></li>
                 <li><a href="2.DeScratchaPython/versionCouleurs.pdf">De Scratch à Python</a></li>
-                <li>Entrées, Sorties</li>
-                <li>Variables et Types</li>
+                <li><a href="VariablesEntreesSorties.html">Variables, Entrées, Sorties</a></li>
                 <li>Fonctions</li>
                 <li>Tests</li>
                 <li>La boucle Pour</li>
