--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <li><a href="1.LancerPython/LancerPython.pdf">Lancer Python</a></li>
                 <li><a href="2.DeScratchaPython/versionCouleurs.pdf">De Scratch à Python</a></li>
                 <li><a href="VariablesEntreesSorties.html">Variables, Entrées, Sorties</a></li>
+                <li><a href="Tests.html">Tests</a></li>
                 <li>Fonctions</li>
-                <li>Tests</li>
                 <li>La boucle Pour</li>
                 <li>La boucle Tant que</li>
                 <li>Listes</li>
