--- a/Tests.html
+++ b/Tests.html
@@ -126,6 +126,28 @@
                 </div>
             </div>
             <div class="exercice">
+                Compléter cet algorithme pour qu'il affiche le nom du menu et le prix en fonction des choix de l'utilisateur. Les trois possibilité sont :
+                <ul>
+                    <li>formule rapide à 10 € : plat seul</li>
+                    <li>formule classique à 13 € : plat + entrée ou plat + dessert</li>
+                    <li>formule classique à 15 € : plat + entrée + dessert</li>
+                </ul>
+                On suppose que l'utilisateur réponds au deux questions par <mark class="code">"oui"</mark> ou par <mark class="code">"non"</mark>.
+                <div class="algo">
+                    <input type="button" class="copier" value="📑" title="copier">
+                    <p class="code">
+                        entree = input("Une entrée ? ")<br/>
+                        dessert = input("Un dessert ? ")<br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                    </p>
+                </div>
+            </div>
+            <div class="exercice">
                 Compléter cet algorithme pour qu'il affiche la plus grande valeur contenue dans les variables <mark class="code">a</mark>, <mark class="code">b</mark> et <mark class="code">c</mark>.
                 <div class="algo">
                     <input type="button" class="copier" value="📑" title="copier">
