--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="2.DeScratchaPython/versionCouleurs.pdf">De Scratch à Python</a></li>
                 <li><a href="VariablesEntreesSorties.html">Variables, Entrées, Sorties</a></li>
                 <li><a href="Tests.html">Tests</a></li>
-                <li>Fonctions</li>
+                <li><a href="Fonctions.html">Fonctions</a></li>
                 <li>La boucle Pour</li>
                 <li>La boucle Tant que</li>
                 <li>Listes</li>
