--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="VariablesEntreesSorties.html">Variables, Entrées, Sorties</a></li>
                 <li><a href="Tests.html">Tests</a></li>
                 <li><a href="Fonctions.html">Fonctions</a></li>
-                <li>La boucle Pour</li>
+                <li><a href="Pour.html">La boucle Pour</a></li>
                 <li>La boucle Tant que</li>
                 <li>Listes</li>
                 <li>Tuples</li>
