--- a/Pour.html
+++ b/Pour.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="main">
-            <h1>Fonctions</h1>
+            <h1>La boucle « pour »</h1>
             <p>
                 Dans cette activité, nous allons découvrir la boucle « pour » qui permet de répéter des instructions plusieurs fois.
             </p>
