--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="Tests.html">Tests</a></li>
                 <li><a href="Fonctions.html">Fonctions</a></li>
                 <li><a href="Pour.html">La boucle Pour</a></li>
-                <li>La boucle Tant que</li>
+                <li><a href="Tantque.html">La boucle Tant que</a></li>
                 <li>Listes</li>
                 <li>Tuples</li>
                 <li>Dictionnaires</li>
