--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     </head>
     <body>
         <div class="main">
-            <h1>Découverte de Python</h1>
-            <p>
-                Ces activités vous permettrons de découvrir le langage de programmation Python.
-            </p>
+            <h1>Première NSI</h1>
             <ol>
                 <li><a href="1.LancerPython/LancerPython.pdf">Lancer Python</a></li>
                 <li><a href="2.DeScratchaPython/versionCouleurs.pdf">De Scratch à Python</a></li>
@@ -33,6 +30,10 @@
                 <li>Plus proches voisins</li>
                 <li><a href="glouton.html">Algorithmes gloutons</a></li>
                 <li><a href="tkinter.html">Interface graphique avec Tkinter</a></li>
+            </ol>
+            <h1>Terminale NSI</h1>
+            <ol>
+                <li><a href="Recursivite.html">Récursivité</a></li>
             </ol>
         </div>
     </body>
