--- a/Recursivite.html
+++ b/Recursivite.html
@@ -203,6 +203,14 @@
             </div>
             <h3>Suite de Fibonacci</h3>
             <h3>Tour de Hanoï</h3>
+            <h2>Autres exercices</h2>
+            <ol>
+                <li><a href="miroir.html">miroir d'un mot</a></li>
+                <li><a href="syracuse.html">suite de Syracuse</a></li>
+                <li><a href="coefficientsBinomiaux.html">coefficients binomiaux</a></li>
+                <li><a href="permutations.html">liste des permutations (et anagrammes)</a></li>
+                <li><a href="jeuDame.html">jeu de la dame</a></li>
+            </ol>
         </div>
         <script type="text/javascript" src="script.js"></script>
     </body>
