--- a/VariablesEntreesSorties.html
+++ b/VariablesEntreesSorties.html
@@ -183,8 +183,9 @@
                 </div>
             </div>
             <div class="exercice">
+                A l'aide de la fonction <mark class="code">print</mark>, reproduire la figure suivante :
                 <div class="algo">
-                    A l'aide de la fonction <mark class="code">print</mark>, reproduire la figure suivante :
+                    <input type="button" class="copier" value="📑" title="copier">
                     <p class="code">
                         X <br/>
                         XX <br/>
